chrome/browser/resources/webui_toolbar/reload_button.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #scheme=relative
 * #import=//resources/cr_elements/cr_icons_lit.css.js
 * #include=cr-icons-lit
 * #css_wrapper_metadata_end */

cr-icon-button {
  cursor: default;
  --cr-icon-button-icon-size: 20px;
  --cr-icon-button-margin-end: 0;
  --cr-icon-button-margin-start: 0;
  --cr-icon-button-size: 34px;
  --cr-icon-button-fill-color: var(--color-toolbar-button-icon);
}

cr-icon-button[is-menu-open=true] {
  background-color: var(--cr-active-background-color);
}

