Fix gap between WebUI reload button and its context menu.
The reason was because WebUIReloadControl::HandleContextMenu called
RunMenuAt with menu anchor position kBubbleBottomRight, which should be
kTopLeft. It also matches View's implementation, which is ultimately
handled in ToolbarButton::ShowMenuForModel that uses kTopLeft.

Although the parent toolbar-app already sets display to flex, add some
configurations to reload_button.css to make it more robust, in case the
parent changes.

Bug: 476096321
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7595954
Commit-Queue: Qingxin Wu <qingxinwu@google.com>
Cr-Commit-Position: refs/heads/main@{#1588902}

--- a/chrome/browser/resources/webui_toolbar/reload_button.css
+++ b/chrome/browser/resources/webui_toolbar/reload_button.css
@@ -9,12 +9,20 @@
  * #include=cr-icons-lit
  * #css_wrapper_metadata_end */
 
+:host {
+  align-items: center;
+  display: inline-flex;
+  justify-content: center;
+  position: relative;
+  --cr-icon-button-size: 34px;
+  height: var(--cr-icon-button-size);
+  width: var(--cr-icon-button-size);
+}
+
 cr-icon-button {
+  margin: 0;
   cursor: default;
   --cr-icon-button-icon-size: 20px;
-  --cr-icon-button-margin-end: 0;
-  --cr-icon-button-margin-start: 0;
-  --cr-icon-button-size: 34px;
   --cr-icon-button-fill-color: var(--color-toolbar-button-icon);
 }
 
